--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,5 +25,13 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile 'com.android.support:appcompat-v7:24.1.1'
+    compile 'com.shaishavgandhi:login-buttons:0.1.1'
+    compile 'com.google.firebase:firebase-auth:9.4.0'
+    compile 'com.dynamitechetan.flowinggradient:flowinggradient:1.1'
+
     testCompile 'junit:junit:4.12'
 }
+
+
+
+apply plugin: 'com.google.gms.google-services'
