--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,13 +24,16 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+
     compile 'com.android.support:appcompat-v7:24.1.1'
     compile 'com.shaishavgandhi:login-buttons:0.1.1'
     compile 'com.google.firebase:firebase-auth:9.4.0'
     compile 'com.dynamitechetan.flowinggradient:flowinggradient:1.1'
-
+    compile 'com.google.firebase:firebase-core:9.4.0'
     testCompile 'junit:junit:4.12'
 }
+
+
 
 
 
