--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,12 +1,12 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 24
+    compileSdkVersion 23
     buildToolsVersion "24.0.1"
     defaultConfig {
         applicationId "com.example.mkemaltas.yapiyoz"
         minSdkVersion 15
-        targetSdkVersion 24
+        targetSdkVersion 23
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -25,15 +25,18 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
 
-    compile 'com.android.support:appcompat-v7:24.1.1'
+    compile 'com.android.support:appcompat-v7:23.1.1'
+    compile 'com.android.support:design:23.0.1'
     compile 'com.shaishavgandhi:login-buttons:0.1.1'
     compile 'com.google.firebase:firebase-auth:9.4.0'
-    compile 'com.dynamitechetan.flowinggradient:flowinggradient:1.1'
     compile 'com.google.firebase:firebase-core:9.4.0'
+    compile 'com.facebook.android:facebook-android-sdk:[4,5)'
     testCompile 'junit:junit:4.12'
 }
 
-
+repositories {
+    mavenCentral()
+}
 
 
 
